# pensa

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  PENSA_Tutorial.ipynb  README.md  TODO.md  analysis.py  environment.yml  environment_dev.yml  extract_coordinates.py  extract_coordinates_combined.py  methods.py  pca.py  preprocessing.py  pyproject.toml  run-test.sb  setup.cfg  setup.py  test.sb  tox.ini
.github/workflows/: greetings.yml  python-package-conda.yml  python-package-miniconda.yml
docs/: README  about.rst  api.rst  conf.py  contribute.rst  create_docs.sh  examples.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  tut-1-intro.rst  tut-2-preprocessing.rst  tut-3-featurization.rst  tut-4-comparison.rst  tut-5-dimensionality.rst  tut-6-ssi.rst  tutorials.rst
docs/source/: modules.rst  pensa.clusters.rst  pensa.comparison.rst  pensa.dimensionality.rst  pensa.features.rst  pensa.preprocessing.rst  pensa.rst  pensa.statesinfo.rst
examples/: 0-preprocessing.sh  1-comparison-of-feature-distributions.sh
examples/selections/: rho_protein.txt  rho_tm.txt  rho_tm7.txt
pensa/: __init__.py  clusters.py  comparison.py  density_features.py  features.py  obtain_water_pockets.py  pca.py  preprocessing.py  statesinfo.py  tica.py
pensa/clusters/: __init__.py  clustering.py  trajectory.py  wss.py
pensa/comparison/: __init__.py  metrics.py  processing.py  projections.py  relative_entropy.py  statespecific.py  statistics.py  uncertainty_analysis.py  visualization.py
pensa/diffnets/: __init__.py  _version.py  analysis.py  data_processing.py  exmax.py  nnutils.py  training.py
pensa/dimensionality/: __init__.py  lda.py  pca.py  (+3 more)
scripts/: PyMOL_Visualization.txt  SSI_tutorial.py  calculate_combined_clusters.py  calculate_combined_principal_components.py  calculate_principal_components.py  compare_feature_distributions.py  density_featurizer.py  diffnets_main.py  diffnets_predict_new.py  extract_coordinates.py  extract_coordinates_combined.py  get_tutorial_datasets.py  hbond_featurizer.py  residue_visualization.tcl  state_specific_info.py
tests/: test.py  test_diffnets.py  test_diffnets_cli.py  test_features.py  test_workflow.py  uncertainty_analysis.py
tutorial/: 0-download.sh  0-preprocessing.sh  1-comparison-of-feature-distributions.sh  1-preprocessing-download.sh  1-preprocessing-gpcrmd.sh  1alt-preprocessing-sherlock.sh  2-comparison-of-feature-distributions.sh  2-principal-component-analysis.sh  3-clustering.sh  3-principal-component-analysis.sh  4-clustering.sh  5-density-hbond-featurization.sh  6-state-specific-information.sh  PENSA_Tutorial.ipynb  PENSA_Tutorial_GPCRmd.ipynb  PENSA_Tutorial_GPCRmd_MOR.ipynb  PENSA_Tutorial_GPCRmd_animated.ipynb  PENSA_Tutorial_GPCRmd_no_animations.ipynb  PENSA_Tutorial_SSI.py  PENSA_Tutorial_Sherlock.ipynb  PENSA_Tutorial_density_featurizer.py  PENSA_Tutorial_hbond_featurizer.py  README.md  SSI_tutorial.py  density_featurizer_tutorial.py  runsh.sh
(+5114 files in other folders)
