[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pensa"
version = "0.6.0"
description = "exploratory analysis and comparison of biomolecular conformational ensembles."
authors = [
    {name = "Martin Voegele, Neil Thomson, Sang Truong, Jasper McAvity", email = "martinvoegele1989@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Molecular Dynamics",
    "Topic :: Scientific/Engineering :: Computational Biology",
]
dependencies = [
    "numpy>=1.23",
    "scipy",
    "pandas",
    "matplotlib",
    "deeptime",
    "MDAnalysis==2.8",
    "biotite",
    "gpcrmining",
]
requires-python = "==3.10"

[project.urls]
Documentation = "https://pensa.readthedocs.io/en/latest/"
Source = "http://github.com/drorlab/pensa"

[tool.setuptools.packages.find]
include = [
    "pensa",
    "pensa.preprocessing",
    "pensa.features", 
    "pensa.comparison",
    "pensa.dimensionality",
    "pensa.clusters",
    "pensa.statesinfo"
]



