[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pensa"
version = "0.6.0"
description = "exploratory analysis and comparison of biomolecular conformational ensembles."
authors = [
    {name = "Martin Voegele, Neil Thomson, Sang Truong, Jasper McAvity", email = "martinvoegele1989@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.23",
    "scipy",
    "pandas",
    "matplotlib",
    "deeptime",
    "MDAnalysis==2.8",
    "biotite",
    "gpcrmining",
]
requires-python = "==3.10.*"

[project.urls]
Documentation = "https://pensa.readthedocs.io/en/latest/"
Source = "http://github.com/drorlab/pensa"

[metadata]
# Include the license file in the wheel.
license_files = ["LICENSE"]

[tool.setuptools.packages.find]
include = [
    "pensa",
    "pensa.preprocessing",
    "pensa.features", 
    "pensa.comparison",
    "pensa.dimensionality",
    "pensa.clusters",
    "pensa.statesinfo"
]




